--- a/test/public/index+$+$-.html
+++ b/test/public/index+$+$-.html
@@ -1,49 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0" />
-<title>LazyPage Demo</title>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0" />
+    <title>LazyPage Demo</title>
+  </head>
 
-<body>
-你好4
-<script type="x-tmpl-lazypage" source="/cgi/list.json" id="block1">
-	<p>date: <%=format.dataFormat("dd-MM-yyyy hh:mm:ss TT", 1550487329)%>, number: <%=format.toThousands(123456789.123)%></p>
-	<p>class name script: <%=team%></p>
-	<%for(var i=0; i<members.length; i++){%>
-		<p>member id: <%=members[i]%></p>
-		<%if(i==0){%>
-			<jscript type="x-tmpl-lazypage" source="cgi/person.json" ajax-data="id=<%=members[i]%>">
-				<p>Hello1, my name is <&=name&>. I'm years old.</p>
-			</jscript>
-		<%}%>
-	<%}%>
-</script> 
-<script type="x-tmpl-lazypage" source="/cgi/person.json" lazy="true" id="lazy-block">
-	<p>Hello2, my name is <%=name%>. I'm <%=profile.age%> years old.</p>
-</script>
-<script type="x-tmpl-lazypage" source="/cgi/person.json" wait="block1" ajax-data="id={@block1.team}">
-	<p>Hello3, my name is <%=name%>. I'm <%=profile.age%> years old.<%={@block1.team}.length%>.</p>
-</script>
-<script type="x-tmpl-lazypage" source="/cgi/person.json" ajax-data="id={&id}">
-	<%var temp=[3,2,1];%>
-	<p>Hello4, my name is <%=name%>. I'm <%=profile.age%> years old.</p>
-	<%for(var i=0; i<temp.length; i++){%>
-		<%=i%>: <%=temp[i]%><br/>
-	<%}%>
-</script>
-<script type="x-tmpl-lazypage" source="{'name':'Krasimir Tsonev','profile':{'age':2}}" src="/include/_body.html"></script>
-<script src="/js/lazypage.js"></script>
-<script src="/js/format.js"></script>
-<script>
-	LazyPage.ready(function(){
-		var person = document.getElementById("lazy-block");
-		person.setAttribute("ajax-data","id=1");
-		LazyPage.runBlock(person, function(){
-			console.log("lazy-block render over")
-		});
-	})
-</script>
-</body>
+  <body>
+    你好4
+    <script type="x-tmpl-lazypage" source="/cgi/list.json" id="block1">
+      <p>date: <%=format.dataFormat("dd-MM-yyyy hh:mm:ss TT", 1550487329)%>, number: <%=format.toThousands(123456789.123)%></p>
+      <p>class name script: <%=team%></p>
+      <%for(var i=0; i<members.length; i++){%>
+      	<p>member id: <%=members[i]%></p>
+      	<%if(i==0){%>
+      		<jscript type="x-tmpl-lazypage" source="/cgi/person.json" ajax-data="id=<%=members[i]%>">
+      			<p>Hello1, my name is <&=name&>. I'm years old.</p>
+      		</jscript>
+      	<%}%>
+      <%}%>
+    </script>
+    <script type="x-tmpl-lazypage" source="/cgi/person.json" lazy="true" id="lazy-block">
+      <p>Hello2, my name is <%=name%>. I'm <%=profile.age%> years old.</p>
+    </script>
+    <script type="x-tmpl-lazypage" source="/cgi/person.json" wait="block1" ajax-data="id={@block1.team}">
+      <p>Hello3, my name is <%=name%>. I'm <%=profile.age%> years old.<%={@block1.team}%>.</p>
+    </script>
+    <script type="x-tmpl-lazypage" source="/cgi/person.json" ajax-data="id={&id}">
+      <%var temp=[3,2,1];%>
+      <p>Hello4, my name is <%=name%>. I'm <%=profile.age%> years old.</p>
+      <%for(var i=0; i<temp.length; i++){%>
+      	<%=i%>: <%=temp[i]%><br/>
+      <%}%>
+    </script>
+    <script type="x-tmpl-lazypage" source="{'name':'Krasimir Tsonev','profile':{'age':2}}" src="/include/_body.html"></script>
+    <script src="/dist/lazypage.js"></script>
+    <script src="/js/format.js"></script>
+    <script>
+      LazyPage.ready(function() {
+        var person = document.getElementById('lazy-block');
+        person.setAttribute('ajax-data', 'id=1');
+        LazyPage.runBlock(person, function() {
+          console.log('lazy-block render over');
+        });
+      });
+    </script>
+  </body>
 </html>
