--- a/test/public/index+$-.html
+++ b/test/public/index+$-.html
@@ -20,7 +20,7 @@
       	<%}%>
       <%}%>
     </script>
-    <script type="x-tmpl-lazypage" source="../cgi/person.json" lazy="true" id="lazy-block">
+    <script type="x-tmpl-lazypage" source="../cgi/person.json" id="lazy-block">
       <p>Hello2, my name is <%=name%>. I'm <%=profile.age%> years old.</p>
     </script>
     <script type="x-tmpl-lazypage" source="../cgi/person.json" wait="block1" ajax-data="id={@block1.team}">
@@ -34,16 +34,5 @@
       <%}%>
     </script>
     <script type="x-tmpl-lazypage" source="{'name':'Krasimir Tsonev','profile':{'age':2}}" src="../include/_body.html"></script>
-    <script src="../dist/lazypage.js"></script>
-    <script src="../js/format.js"></script>
-    <script>
-      LazyPage.ready(function() {
-        var person = document.getElementById('lazy-block');
-        person.setAttribute('ajax-data', 'id=1');
-        LazyPage.runBlock(person, function() {
-          console.log('lazy-block render over');
-        });
-      });
-    </script>
   </body>
 </html>
