--- a/test/static/definemethod-.html
+++ b/test/static/definemethod-.html
@@ -11,11 +11,11 @@
 
   <body>
     <block src="/include/_head.html"></block>
-    <hr>
+    <hr />
     <block>
-        <div>{{ $import.format.toThousands(999999999) }}</div>
+      <div>{{ $import.format.toThousands(999999999) }}</div>
     </block>
-    <hr>
+    <hr />
     html template
     <pre>
         <code>
@@ -27,17 +27,15 @@
     config.json
     <pre>
         <code>
-            {
-                &quot;import&quot;: {
-                    &quot;format&quot;: &quot;js/format.js&quot;
-                }
-            }
+          {
+            &quot;import&quot;: [&quot;js/format.js&quot;]
+          }
         </code>
     </pre>
     js/format.js
     <pre>
         <code>
-            var format = {
+            root.format = {
               //千位数字逗号分隔
               toThousands: function(number){
                 var num = (number || 0).toString();
@@ -45,9 +43,6 @@
                 nums[0]=nums[0].replace(/\d{1,3}(?=(\d{3})+(\.\d*)?$)/g,&#39;$&amp;,&#39;);
                 return nums.join(&quot;.&quot;);
               }
-            }
-            if(typeof module !== &#39;undefined&#39;){
-              module.exports=format;
             }
         </code>
     </pre>
