--- a/test/static/loadsource-.html
+++ b/test/static/loadsource-.html
@@ -2,22 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0" />
     <title>加载外部数据</title>
   </head>
   <body>
     <block src="/include/_head.html"></block>
-    <hr>
+    <hr />
     <block source="/cgi/person.json" rquest-param="id=2&type=1">
-        <div :style="'color:'+color">{{ name }}</div>
-        <%if(age%2==1){%>
-            <span>{{ age }}</span>
-        <%}%>
+      <div :style="'color:'+color">{{ name }}</div>
+      <%if(age%2==1){%>
+      <span>{{ age }}</span>
+      <%}%>
     </block>
-    <hr>
+    <hr />
     html template
     <pre>
         <code>
@@ -28,7 +25,7 @@
                 &lt;%}%&gt;
             &lt;/block&gt;
         </code>
-    </pre>  
+    </pre>
     person.json
     <pre>
         <code>
@@ -38,7 +35,6 @@
                 &quot;color&quot;: &quot;green&quot;
             }
         </code>
-    </pre> 
+    </pre>
   </body>
 </html>
-
